# spotify-data-tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  FILE_UPLOAD_PLAN.md  IMPLEMENTATION_PLAN_APPROACH3.md  LABBOOK.md  README.md  TECHNICAL_RECOMMENDATIONS.md  main.py  pyproject.toml  test_analytics_manual.py  test_api_manual.py  test_frontend_manual.py  test_loader_manual.py  vercel.json
docs/: LABBOOK.md  NOTES.md  TIDY_UP.md
src/: analytics.py  app_state.py  loaders.py  models.py  session.py
src/api/: analytics.py  playlists.py  tracks.py
src/templates/: analytics.html  base.html  index.html  playlists.html  tracks.html  upload.html
static/css/: custom.css
static/js/: app.js
tests/: test_analytics.py  test_loaders.py  test_upload.py
